tests/run/error_match_nonexhaustive.out
tests/run/error_match_nonexhaustive.em:5:5: error: non-exhaustive match: a variant is not handled
